ingressClass.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: myapp-ingress-class
  annotations:
    ingressclass.kubernetes.io/is-default-class: 'true'
spec:
  controller: ingress.k8s.aws/alb
